--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,17 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+app.yaml
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
